[gd_scene load_steps=7 format=2]

[ext_resource path="res://game_scene/GameScene.gd" type="Script" id=1]
[ext_resource path="res://game_scene/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_scene/obstacle/Obstacle.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_scene/food/Food.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_button_theme.tres" type="Theme" id=5]
[ext_resource path="res://background/background.tscn" type="PackedScene" id=6]

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )
Food = ExtResource( 4 )
Obstacle = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 6 )]
show_behind_parent = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverPanel" type="Panel" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -186.0
margin_right = 312.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="HBoxContainer" parent="CanvasLayer/GameOverPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -20.0
margin_right = 147.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/GameOverPanel/ScoreContainer"]
margin_top = 4.0
margin_right = 209.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 236.5, 35 )
theme = ExtResource( 5 )
text = "Final Score:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/GameOverPanel/ScoreContainer"]
margin_left = 213.0
margin_top = 4.0
margin_right = 294.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 236.5, 35 )
theme = ExtResource( 5 )
text = "000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -236.5
margin_right = 236.5
margin_bottom = 70.0
rect_pivot_offset = Vector2( 236.5, 35 )
theme = ExtResource( 5 )
text = "Game Over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="CanvasLayer/GameOverPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -66.0
custom_constants/separation = 166
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="ToolButton" parent="CanvasLayer/GameOverPanel/ButtonContainer"]
margin_left = 73.0
margin_right = 186.0
margin_bottom = 66.0
theme = ExtResource( 5 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="ToolButton" parent="CanvasLayer/GameOverPanel/ButtonContainer"]
margin_left = 352.0
margin_right = 551.0
margin_bottom = 66.0
theme = ExtResource( 5 )
text = "Main Menu"

[node name="ScorePanel" type="Panel" parent="CanvasLayer"]
margin_right = 146.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/ScorePanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -15.5
margin_right = -12.0
margin_bottom = 16.5
theme = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvanceTimer" type="Timer" parent="."]

[node name="GridOffset" type="Node2D" parent="."]

[node name="Obstacles" type="Node2D" parent="GridOffset"]
z_index = 4096

[node name="Food" type="Node2D" parent="GridOffset"]
z_index = 5

[node name="Player" parent="GridOffset" instance=ExtResource( 2 )]

[connection signal="pressed" from="CanvasLayer/GameOverPanel/ButtonContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPanel/ButtonContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="timeout" from="AdvanceTimer" to="." method="advance_player"]
[connection signal="ate" from="GridOffset/Player" to="." method="_on_player_ate"]
[connection signal="lost" from="GridOffset/Player" to="." method="_on_player_lost"]
